<resources>
    <string name="app_name">ClearVis</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="NotHaveAcc">Doesn’t have account? Sign up!</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="name_hint">Full Name</string>
    <string name="AlrHaveAcc">Already have an account? Login!</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_eyeCheck">Eye Check</string>
    <string name="title_profile">Profile</string>
    <string name="txt_tittle_eyecheck">Photo of your eyes and know the disease early</string>
    <string name="desc_image_detect_eye">Image detect eye</string>
    <string name="txt_take_picture">Take Picture</string>
    <string name="txt_how_to">How To</string>
    <string name="txt_1">1</string>
    <string name="txt_step1">Take a photo of your face with flash on</string>
    <string name="txt_2">2</string>
    <string name="txt_step2">Crop left or right eye image</string>
    <string name="txt_3">3</string>
    <string name="txt_step3">finally you get the detection result</string>
    <string name="tv_result_eyeCheck">Your Eye is</string>
    <string name="txt_percent">%</string>
    <string name="decs_image_user_eye">Image user eye</string>
    <string name="desc_logo_clearvis">Logo_clearvis</string>
    <string name="desc_background_email">background email</string>
    <string name="desc_icon_email">icon email</string>
    <string name="desc_background_password">background password</string>
    <string name="decs_icon_password">icon password</string>
    <string name="save">Save Profile</string>
    <string name="password">Password</string>
    <string name="Password_Confirm">Confirm Password</string>
    <string name="txt_logout">Logout</string>
    <string name="edit">edit profile</string>
    <string name="txt_check_again">Check Again</string>
    <string name="decs_your_eye_image">your eye image</string>
    <string name="txt_no_data">No Data</string>
    <string name="illustration">illustrasi</string>
    <string name="articleTitle">Article</string>
    <string name="article_img">Image Article</string>
</resources>