<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signup.SignupActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="228dp"
        android:layout_height="229dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clearvis_logo" />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/signup"
        android:textAppearance="@style/Login_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/signup_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_text"
        app:srcCompat="@drawable/et_layout" />

    <EditText
        android:id="@+id/name_et"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/name_hint"
        android:textSize="16sp"
        android:background="@drawable/edittext_layout"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/signup_layout"
        app:layout_constraintEnd_toEndOf="@+id/signup_layout"
        app:layout_constraintTop_toTopOf="@+id/signup_layout" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintBottom_toBottomOf="@+id/signup_layout"
        app:layout_constraintEnd_toStartOf="@+id/name_et"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/signup_layout"
        app:layout_constraintTop_toTopOf="@+id/signup_layout" />

    <ImageView
        android:id="@+id/email_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_layout"
        app:srcCompat="@drawable/et_layout" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/email_hint"
        android:textSize="16sp"
        android:background="@drawable/edittext_layout"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/email_layout"
        app:layout_constraintEnd_toEndOf="@+id/email_layout"
        app:layout_constraintTop_toTopOf="@+id/email_layout" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_email_24"
        app:layout_constraintBottom_toBottomOf="@+id/email_layout"
        app:layout_constraintEnd_toStartOf="@+id/email_et"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/email_layout"
        app:layout_constraintTop_toTopOf="@+id/email_layout" />

    <ImageView
        android:id="@+id/password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/et_layout"
        app:layout_constraintEnd_toEndOf="@+id/email_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_layout"
        app:layout_constraintTop_toBottomOf="@+id/email_layout" />

    <com.dicoding.bintangpr.clearvis.view.customview.PasswordEditText
        android:id="@+id/passwordEditTextLayout"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/password_layout"
        app:layout_constraintEnd_toEndOf="@+id/password_layout"
        app:layout_constraintTop_toTopOf="@+id/password_layout" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_lock_24"
        app:layout_constraintBottom_toBottomOf="@+id/password_layout"
        app:layout_constraintEnd_toStartOf="@+id/passwordEditTextLayout"
        app:layout_constraintStart_toStartOf="@+id/password_layout"
        app:layout_constraintTop_toTopOf="@+id/password_layout" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:backgroundTint="@color/soft_blue"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:text="@string/AlrHaveAcc"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        style="?android:attr/borderlessButtonStyle"/>


</androidx.constraintlayout.widget.ConstraintLayout>